# hive-micro

./: Dockerfile  README.md  alembic.ini  app.py  blocks.py  docker-compose.yml  markdown.md  pyproject.toml  requirements.txt  sample.env
.serena/: project.yml
.serena/memories/: project_overview.md  project_style.md  suggested_commands.md
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_add_appreciations_columns.py
app/: __init__.py  api.py  helpers.py  models.py  ui.py  watcher.py  wsgi.py
app/static/css/: theme.css
app/static/js/: audit.js  feed.js  follow.js  hive_utils.js  login.js  mentions.js  mod_dashboard.js  modals.js  moderation.js  post.js  post_view.js  tip.js  toast.js  user_profile.js
app/templates/errors/: 401.html  403.html  404.html  500.html
app/templates/layout/: base.html
app/templates/pages/: audit.html  feed.html  forum_category.html  forum_home.html  forum_topic.html  login.html  mentions.html  mod_dashboard.html  new_post.html  new_topic.html  (+3 more)
deploy/systemd/: hive-micro-gunicorn.service  hive-micro-watcher.service
docs/: DATABASE_DESIGN.md  DB_MIGRATIONS.md  FORUM_IMPLEMENTATION_SUMMARY.md  FORUM_PROTOCOL.md
scripts/: compare_bulk_block.py  inspect_ops.py  normalize_trx_ids.py  show_block.py  show_bulk_ops.py
static/css/: theme.css
static/js/: feed.js  login.js  post.js
templates/: 401.html  403.html  404.html  500.html  base.html  feed.html  login.html  mentions.html  new_post.html  post.html  profile.html  user_profile.html
tests/: api_test_page.html  simple_test.html  test_expired_timestamp.html
(+4 files in other folders)
